# RobotVoice

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  deploy_config_split_to_robot.sh  deploy_realtime_to_robot.sh  package.xml  pixi.toml  setup.py
config/: agent.yaml  prompts.yaml  safety.yaml  stepfun_realtime.yaml  tools.yaml
launch/: agent_non_realtime.launch  agent_realtime.launch  agent_stepfun_realtime.launch  agent_with_realtime_stub.launch
local_tests/: mic_check.py  stepfun_realtime_local_test.py
scripts/: llm_voice_agent_node.py  realtime_text_stub_node.py  stepfun_realtime_voice_node.py
src/ros_llm_voice_agent/: __init__.py  compat.py
src/ros_llm_voice_agent/core/: __init__.py  agent_harness.py  event_types.py  session_manager.py  state_machine.py
src/ros_llm_voice_agent/llm/: base.py  generic_chat_client.py  prompt_builder.py  tool_call_parser.py
src/ros_llm_voice_agent/memory/: __init__.py  jsonl_memory_store.py  short_term_memory.py
src/ros_llm_voice_agent/ros/: __init__.py  ros_adapter.py  ros_params.py  ros_publishers.py  ros_subscribers.py
src/ros_llm_voice_agent/tools/: __init__.py  action_tools.py  dynamic_ros_tools.py  factory.py  memory_tools.py  motion_tools.py  registry.py  robot_status_tools.py  safety_gate.py  schemas.py  speech_tools.py  vision_tools.py
src/ros_llm_voice_agent/voice/: audio_player.py  realtime_base.py  realtime_stub.py  stepfun_tts.py  text_sanitizer.py  trigger_router.py  tts_base.py  volcengine_tts.py
srv/: ExecuteTool.srv  GetToolSpecs.srv
